--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	</head>
 
 	<body>
-
+        <div class="navbar">
+            <h1>Breathe Code Photo Feed</h1>
+        </div>
 	</body>
 </html>
