--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
         <div class="navbar">
             <h1>Breathe Code Photo Feed</h1>
         </div>
+
+		<div class="container">
+		</div>
+
+		<div class="photo1">
+			<img src="http://c.files.bbci.co.uk/48DD/production/_107435681_perro1.jpg" alt="">
+		</div>
 	</body>
 </html>
+
+
