--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         </div>
 
 		<div class="container">
+			<div class="texto-encima-photo1"><strong>First Photo</strong></div>
+			
 		</div>
 
 		<div class="photo1">
