--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
             <h1>Breathe Code Photo Feed</h1>
         </div>
 
-		<div class="container">
+		<div class="container">	
 			<div class="texto-encima-photo1"><strong>First Photo</strong></div>
+			<div class="texto-encima-photo1-lateral">11/14</p>
 			
 		</div>
 
 		<div class="photo1">
 			<img src="http://c.files.bbci.co.uk/48DD/production/_107435681_perro1.jpg" alt="">
 		</div>
+
+		<div class="pie-photo1">Mi meta en la vida es llegar a ser tan maravilloso como mi perro cree que soy.</div>
 	</body>
 </html>
 
