--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
 
 		<div class="container">	
 			<div class="texto-encima-photo1"><strong>First Photo</strong></div>
-			<div class="texto-encima-photo1-lateral">11/14</p>
-			
+			<div class="texto-encima-photo1-lateral">11/14</div>
 		</div>
 
 		<div class="photo1">
 			<img src="http://c.files.bbci.co.uk/48DD/production/_107435681_perro1.jpg" alt="">
 		</div>
-
+		
 		<div class="pie-photo1">Mi meta en la vida es llegar a ser tan maravilloso como mi perro cree que soy.</div>
+
+		<div class="photo2">
+			<img src="http://www.viajesylugares.com/images/showid/2083459">
+		</div>
 	</body>
 </html>
 
